<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECF2F4"
    android:backgroundTint="#8D51B907"
    android:hapticFeedbackEnabled="false"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="231dp"
        android:layout_height="202dp"
        android:layout_marginTop="16dp"
        android:background="#E2E6E2"
        android:backgroundTint="#F1E7E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo1" />

    <Button
        android:id="@+id/signup"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="68dp"
        android:backgroundTint="#275009"
        android:text="@string/signup"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextPassword"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#275009"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toEndOf="@+id/signup"
        app:layout_constraintTop_toBottomOf="@+id/edtTextPassword"
        app:layout_constraintVertical_bias="0.204" />

    <EditText
        android:id="@+id/edtTextPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:width="2dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextEmail"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="371dp"
        android:layout_height="69dp"
        android:background="@drawable/cyancolor"
        android:backgroundTint="#32670C"
        android:gravity="center"
        android:shadowColor="#F1EDED"
        android:text="@string/user_login"
        android:textColor="@color/edit_text_background"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.68" />


    <EditText
        android:id="@+id/edtTextEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:width="2dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="  Enter e-mail"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

</androidx.constraintlayout.widget.ConstraintLayout>